<resources>
    <string name="app_name">IntroJSON</string>
    <string name="action_settings">Settings</string>
    <string name="city">City: </string>
    <string name="description">Description: </string>
    <string name="lat">Latitude: </string>
    <string name="lon">Longitude: </string>
    <string name="day">Day Temp: </string>
    <string name="min">Min Temp: </string>
    <string name="max">Max Temp: </string>
</resources>
